# Tauri-v2-Template

./: LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
public/: splash.html
src/: App.css  App.tsx  i18n.ts  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  network.rs  titlebar_events.rs  tray.rs
src/assets/locales/en/: translation.json
src/assets/locales/ru/: translation.json
src/components/: AnimatedPage.tsx  Sidebar.tsx  SmoothScrollbar.tsx
src/context/: ThemeContext.tsx
src/pages/: Home.tsx  Settings.tsx
src/pages/HelpPage/: CodeBlock.tsx  CodeSnippets.ts  Help.tsx  SectionCard.tsx
src/window/: CustomTitleBar.tsx  NetworkDetailsDialog.tsx
