[package]
name = "tauri-template"
version = "0.1.0"
description = "A Tauri App"
authors = ["ar3love"]
edition = "2021"


[lib]
name = "tauri_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2.0.0", features = [ "macos-private-api", "tray-icon", "image-png", "config-json5"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-devtools = "2.0.1"

network-interface = "2.0.3"
reqwest = { version = "0.12.22", features = ["json"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"


[profile.release]
panic = "abort"  # Оптимизация: abort вместо unwind
codegen-units = 1  # Меньше размер, но дольше билд
lto = true  # Link-time optimization
opt-level = "s"  # Оптимизация на размер
strip = true  # Убрать debug symbols


